# embeddenator-testkit

./: .copilot  .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  EVALUATION_LOOP_GUIDE.md  EVALUATION_RESULTS.md  HANDOFF_SUMMARY.md  INDEX.md  MIGRATION_REPORT.md  README.md  README_OLD.md  evaluate.sh  evaluation_comprehensive.sh  evaluation_loop.sh
.github/workflows/: ci.yml  release.yml
benches/: integrated_workflows.rs  large_scale_operations.rs  optimization_validation.rs  performance_validation.rs  realworld_datasets.rs
evaluation_data/: small_test.json
examples/: basic_generators.rs  performance_metrics.rs  test_harness.rs
src/: chaos.rs  fixtures.rs  generators.rs  harness.rs  integrity.rs  lib.rs  metrics.rs
src/datasets/: catalog.rs  formats.rs  manager.rs  mod.rs
tests/: cross_component_integration.rs  e2e_workflows.rs  format_compatibility.rs  format_conversion.rs  observability_integration.rs  performance_integration.rs
