[package]
name = "embeddenator-testkit"
version = "0.20.0-alpha.1"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Testing utilities and fixtures for embeddenator VSA operations"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-testkit"
keywords = ["vsa", "testing", "embeddenator"]
categories = ["development-tools::testing"]

[dependencies]
embeddenator = { version = "0.20.0-alpha.1" }
rand = "0.8"
