[package]
name = "embeddenator-testkit"
version = "0.20.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Comprehensive testing utilities and performance benchmarking for embeddenator VSA operations"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-testkit"
keywords = ["vsa", "testing", "benchmarking", "performance", "embeddenator"]
categories = ["development-tools::testing"]

[dependencies]
embeddenator-vsa = { path = "../embeddenator-vsa", version = ">=0.20.1, <1.0.0", features = ["simd"] }
embeddenator = { path = "../embeddenator", version = ">=0.20.0-alpha.1, <1.0.0", features = ["bt-phase-2", "simd"] }
rand = ">=0.8, <1.0"
tempfile = ">=3.13, <4.0"
criterion = { version = ">=0.5, <1.0", features = ["html_reports"] }
proptest = ">=1.4, <2.0"
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0, <2.0"
rayon = ">=1.8, <2.0"
indicatif = ">=0.17, <1.0"
humansize = ">=2.1, <3.0"

[features]
default = []
gpu = []  # Future GPU testing support
distributed = []  # Future distributed testing
large-scale = []  # Enable 20GB+ dataset tests

[[bench]]
name = "performance_validation"
harness = false

[[bench]]
name = "large_scale_operations"
harness = false
required-features = ["large-scale"]

[[bench]]
name = "optimization_validation"
harness = false
